I added all the css instructions and had to use white-space: nowrap in the contact info css to prevent a line break with the contact info.

--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,38 @@
 .container
 {
-
+    max-width: 1024px;
+    margin: auto;
 }
 
+.imgmargin
+{
+    margin-right: 25px;
+    
+}
 #main-bio
 {
-
+    float: left;
+    width: 70%;
 }
 
 #contact-info
 {
+    float: left;
+    width: 30%;
+    line-height: 150%;
+    white-space: nowrap;
+}
 
+.link
+{
+    color: #d10234;
 }
 
 #bio-image
 {
+    float: left;
+    width: 200px;
+    margin: 20px,20px,20px,20px;
 
 }
 html, body
@@ -42,6 +60,9 @@ h1
     font-size: 28px;
     text-align: center;
     margin: 0;
-    
+    }
 
+h2
+{
+    font-size: 24px;
 }
